[tool.poetry]
name = "scrapework"
version = "0.1.0"
description = "simple scraping framework"
authors = ["Stéphane Busso <stephane.busso@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
boto3 = "^1.34.68"
pydantic = "^2.6.4"
parsel = "^1.9.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pytest = "^8.1.1"
ruff = "^0.3.4"
poetry-bumpversion = "^0.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
