[tool.poetry]
name = "scrapework"
version = "0.5.4"
description = "simple scraping framework"
authors = ["Stéphane Busso <stephane.busso@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sbusso/scrapework"
homepage = "https://github.com/sbusso/scrapework"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
boto3 = "^1.34.68"
pydantic = "^2.6.4"
parsel = "^1.9.0"
courlan = "^1.0.0"
trafilatura = "^1.8.0"
httpx = "^0.27.0"
hishel = ">=0.0.24,<0.0.27"
rich = "^13.7.1"
fake-useragent = "^1.5.1"
playwright = "^1.43.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pytest = "^8.1.1"
ruff = ">=0.3.4,<0.5.0"


[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
